// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filter schema should handle additionalProperties 1`] = `
Object {
  "additionalProperties": Object {
    "properties": Object {
      "a": Object {
        "type": "string",
      },
    },
    "type": "object",
  },
  "type": "object",
}
`;

exports[`filter schema should handle additionalProperties true 1`] = `
Object {
  "additionalProperties": true,
  "type": "object",
}
`;

exports[`filter schema should handle allOf 1`] = `
Object {
  "allOf": Array [
    Object {
      "properties": Object {
        "d": Object {
          "type": "string",
        },
      },
      "type": "object",
    },
    Object {
      "properties": Object {
        "a": Object {
          "type": "string",
        },
      },
      "type": "object",
    },
  ],
}
`;
